# kapibara-project

./: .gitignore  .~lock.README.md#  README.MD  README.md  START_CLIENT.sh  START_SERVER.sh  START_WORKER.sh  add_parser_to_cron.sh  deploy_on_alse.sh  deploy_on_alse_1_7_4.sh  deployment_script.sh  docker-compose.dev.yml  docker-compose.inner.yml  docker-compose.prod.yml  docker-compose.yml  docker_export_script.sh  install-astra-1.7.4.sh  install.sh  newdbscript  package-lock.json  pgadmin.env.default  poetry&pyenv  postgres.env.default  transfer_to_alse.sh  transfer_to_alse_1_7_4.sh
backend/: .env.example  .env.prod.example  CRON.md  Dockerfile  README.md  add_parser_to_cron.sh  alembic.ini  cron_add_task.sh  crontab.txt  pyproject.toml  requirements-astra.txt  requirements.txt  run_parser.sh
backend/alembic/: env.py
backend/alembic/versions/: 2024_04_19_2043-4f85a1c82127_change_in_regions_string_16_string_64.py  2024_05_02_1611-8b5d02cf7c09_add_document_types_external_id_index.py  2024_05_02_1636-fd383bf7bcf9_create_all_table_index.py  2024_05_02_1646-ab93ea3bf860_remove_from_table_block_field_name_and_.py  2024_05_02_1648-09343eaddc03_refactoring_in_types_in_block_id_doc_.py  2024_09_17_1818-7ec6bdb5288d_initial.py  2024_09_17_1835-c949ac84db6f_upgrade.py  2024_09_17_1854-0220392adb46_upgrade_вщсгьутеы.py  2024_09_18_1647-5d6a9c7cc08f_add_in_document_index_eo_number.py  2025_03_18_1035-7f1199596b04_add_создал_структуру_базы_данных.py  2025_03_18_1129-d86e7486f01f_fix_изменил_длину_поля_code_в_regions.py  2025_03_18_1151-308d2cbb0680_fix_сделал_индекс_региона_по_code.py  2025_03_18_1238-7b972c09556b_fix_сделал_индекс_региона_на_code_и_.py  2025_03_18_1808-a6ac0438d389_add_uq_districts_id_name.py  2025_03_18_1836-e6c07e3193af_add_act_type.py  2025_03_18_1849-3ba6d9347264_fix_исправил_уникальные_значения_в_types.py  2025_03_19_1027-05be72cc8c88_fix_убрал_индекс_regions_code.py  2025_03_19_1038-f5583e7095ca_fix_изменил_уникальное_ограничение_в_.py  2025_03_19_1121-a0d7724d134d_fix_add_id_reg_field_to_documents_table.py  2025_03_19_1123-d16819e40ac7_fix_add_id_type_field_to_documents_table.py  2025_03_19_1144-52436d970dae_fix_datetime_date_in_model.py  2025_03_19_1233-de5a5de4e01f_fix_documents_change_unique_constraint.py  2025_03_19_1637-2b039fe8b35f_add_for_document_add_field_updated_at.py  2025_03_19_1710-86a1befb44da_fix_for_document_date_datetime.py  2025_03_19_1758-179cd4a6c9dc_fix_for_document_add_field_number.py  2025_03_19_1831-b69820b7ddae_.py  2025_03_20_1312-4a1cfd94ba6f_.py  2025_03_20_1318-79d0cf2bb82c_.py  2025_03_20_2137-d88b8c883483_uq_documents_eo_number_id_reg.py  2025_03_21_1111-eaccd21637a3_add_documents_pdf_file_length_integer_.py  2025_03_31_0955-2fe3a80dfcf0_add_index.py  2025_04_07_1958-b319e63290d6_add_new_field_is_valid_for_documents_.py  2025_09_02_2155-f5bf60e49a8d_add_new_fields_for_table_documents.py
backend/scripts/: start_scheduler.sh
backend/src/: .db.env  .env.default  .external.env  celery_worker.py  config.py  database.env  errors.py  main.py  parser_script.py
backend/src/api/: dashboard.py  deadlines.py  dependencies.py  districts.py  parser.py  regions.py  routers.py  statistics.py  subjects.py  table.py  validator.py
backend/src/assets/: data.py  districts.json
backend/src/database/: __init__.py  setup.py
backend/src/models/: __init__.py  act.py  blocks.py  deadlines.py  district.py  districts.py  document.py  document_types.py  document_types__blocks.py  documents.py  organs.py  region.py  regions.py  role.py  roles.py  type.py  types.py  types_in_block.py  user.py  users.py
backend/src/notificator/: __init__.py  main.py  test.py
backend/src/parser/: __init__.py  main.py
backend/src/repositories/: __init__.py  blocks.py  dashboard.py  deadlines.py  districts.py  document_types.py  documents.py  organs.py  (+6 more)
backend/tests/: conftest.py  schemas.py  test_endpoints.py
services/backend/: alembic.ini  pyproject.toml  run_parser.py  run_uvicorn_server.py
services/parser/: Dockerfile  cron.config  parser.log.parser  pyproject.toml
(+469 files in other folders)
