[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "annotated-types>=0.6.0",
    "anyio>=3.7.1",
    "asyncpg>=0.28.0",
    "black>=25.1.0",
    "celery>=5.4.0",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.0",
    "click>=8.1.7",
    "exceptiongroup>=1.1.3",
    "fastapi>=0.103.1",
    "greenlet>=3.0.0",
    "h11>=0.14.0",
    "httpx>=0.28.1",
    "idna>=3.4",
    "jsonschema>=4.23.0",
    "psycopg>=3.1.10",
    "psycopg-binary>=3.1.10",
    "psycopg2-binary>=2.9.9",
    "py-automapper>=1.2.3",
    "pydantic>=2.4.1",
    "pydantic-core>=2.10.1",
    "pydantic-settings>=2.0.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.0.0",
    "redis>=5.2.1",
    "requests>=2.31.0",
    "sniffio>=1.3.0",
    "sqlalchemy>=2.0.20",
    "starlette>=0.27.0",
    "tenacity>=9.0.0",
    "trio>=0.29.0",
    "typing-extensions>=4.8.0",
    "urllib3>=2.0.6",
    "uvicorn>=0.23.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
