[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Serafim Oleynik <serafim.oleynik.5777@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
pydantic = "2.4.1"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.0.3"
fake-useragent = "^1.4.0"
annotated-types = "0.6.0"
anyio = "3.7.1"
asyncpg = "0.28.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
click = "8.1.7"
exceptiongroup = "1.1.3"
fastapi = "0.103.1"
greenlet = "3.0.0"
h11 = "0.14.0"
idna = "3.4"
psycopg = "3.1.10"
psycopg-binary = "3.1.10"
py-automapper = "1.2.3"
pydantic-core = "2.10.1"
sniffio = "1.3.0"
sqlalchemy = "2.0.20"
starlette = "0.27.0"
typing-extensions = "4.8.0"
urllib3 = "2.0.6"
uvicorn = "0.23.2"
alembic = "^1.13.1"
aiohttp = "^3.9.4"
aiodns = "^3.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"

[tool.poetry.scripts]
server = "run_uvicorn_server:server"
parser = "run_parser:parser"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
